--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Montserrat:wght@500&family=Rajdhani:wght@500;700&family=Yantramanav:wght@400;700&display=swap')
 
 body
-    background-color: #bbbcf5
+    background-color: black
     line-height: 1
 
 article, aside, details, figcaption, figure,
@@ -40,3 +40,17 @@ time, mark, audio, video, button
         width: 100%
 .dnone
     display: none
+
+// .banner
+//     height: 100vh
+//     width: 100%
+
+.we_provide
+    .we_provide_header_wrapper
+        animation: we_provide_header_wrapper 20s ease-out
+        stroke-dasharray: 20
+        stroke-dashoffset: 0
+
+        @keyframes we_provide_header_wrapper
+            100%
+                stroke-dashoffset: 100
