--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,6 +16,7 @@
 
 body
     background-color: black
+    // background-color: gray
     line-height: 1
 
 article, aside, details, figcaption, figure,
@@ -43,6 +44,10 @@ time, mark, audio, video, button
     vertical-align: baseline
     box-sizing: border-box
     color: white
+    transition: .3s
+
+img, svg
+    transition: .3s
 
 .container
     // background-color: rgba(255, 255, 255, .1)
@@ -50,8 +55,8 @@ time, mark, audio, video, button
     margin: 0 auto
 
 .rock_your_app
-    height: 100vh
-    background-color: rgba(255, 255, 255, .1)
+    height: 800px
+    background-image: url(../img/rock_your_app/bg.png)
 
 header
     .container
@@ -92,21 +97,39 @@ header
     height: 0px
     z-index: 2
     position: relative
-    top: 12px
-    left: 45px
+    top: 25px
+    left: 88px
+    transform: rotate(5deg)
     img
         height: auto
         width: 171px
+
+.logo2_img
+    width: 0px
+    height: 0px
+    z-index: 2
+    position: relative
+    top: 85px
+    left: 120px
 
 .cloud
     position: relative
     width: 0px
     height: 0px
-    left: 270px
+    left: 370px
+    top: 150px
+    .logo
+        width: 0px
+        height: 0px
+        position: relative
+        top: -100px
+        left: 100px
+        img
+            width: 500px
     .text
         position: absolute
-        top: 250px
-        left: 290px
+        top: 98px
+        left: 186px
         transform: rotate(-10deg)
         .h1_first_part, .h1_second_part
             font-family: 'Permanent Marker'
@@ -138,5 +161,57 @@ header
         text-transform: uppercase
         color: black
         position: relative
-        top: -457px
-        left: 254px
+        top: -306px
+        left: 156px
+
+.hand_with_phone
+    position: absolute
+    right: 0px
+    top: -20px
+
+.we_provide
+    display: flex
+    justify-content: center
+    .header:hover
+        .header_element_wrapper
+            svg
+                stroke-dasharray: 20
+                animation: 1s linear 0s infinite alternate header_element_wrapper
+                @keyframes header_element_wrapper
+                    100%
+                        stroke-dashoffset: 40
+
+    .header
+        font-family: 'Bebas Neue'
+        font-style: normal
+        font-weight: 700
+        font-size: 45px
+        line-height: 100%
+        .header_element_wrapper
+            width: 0px
+            height: 0px
+            position: relative
+            left: -55px
+            z-index: 2
+            top: -34px
+
+        .header_element_wrapper_fill
+            width: 0px
+            height: 0px
+            position: relative
+            z-index: 1
+            left: -48px
+            top: -13px
+        .header_element_wrapper_decor
+            width: 0px
+            height: 0px
+            position: relative
+            top: -50px
+            left: -100px
+            top: -78px
+            left: -135px
+            z-index: 0
+        p
+            position: relative
+            transform: rotate(-6deg)
+            z-index: 3
