--- a/sass/style.css
+++ b/sass/style.css
@@ -1,22 +1,26 @@
 @font-face {
-  font-family: "Permanent Marker";
+  font-family: 'Permanent Marker';
   src: url("fonts/Permanent Marker 400.ttf");
   font-weight: 400;
 }
+
 @font-face {
-  font-family: "Bebas Neue";
+  font-family: 'Bebas Neue';
   src: url("fonts/Bebas Neue 400.ttf");
   font-weight: 400;
 }
+
 @font-face {
-  font-family: "Bebas Neue";
+  font-family: 'Bebas Neue';
   src: url("fonts/Bebas Neue 700.ttf");
   font-weight: 700;
 }
+
 @font-face {
-  font-family: "Marker Felt";
+  font-family: 'Marker Felt';
   src: url("fonts/Marker Felt 400.ttf");
 }
+
 body {
   background-color: black;
   line-height: 1;
@@ -48,11 +52,11 @@ time, mark, audio, video, button {
   vertical-align: baseline;
   box-sizing: border-box;
   color: white;
-  transition: 0.3s;
+  transition: .3s;
 }
 
 img, svg {
-  transition: 0.3s;
+  transition: .3s;
 }
 
 .container {
@@ -76,13 +80,13 @@ header .container {
 .links {
   width: 50%;
   display: flex;
-  -moz-column-gap: 60px;
-       column-gap: 60px;
+  column-gap: 60px;
   justify-content: center;
   padding-top: 30px;
 }
+
 .links a {
-  font-family: "Bebas Neue";
+  font-family: 'Bebas Neue';
   font-style: normal;
   font-weight: 700;
   font-size: 28px;
@@ -102,6 +106,7 @@ header .container {
   z-index: 1;
   position: relative;
 }
+
 .logo_img_wrapper_img img {
   width: 350px;
   height: auto;
@@ -116,6 +121,7 @@ header .container {
   left: 88px;
   transform: rotate(5deg);
 }
+
 .logo_img img {
   height: auto;
   width: 171px;
@@ -137,6 +143,7 @@ header .container {
   left: 370px;
   top: 150px;
 }
+
 .cloud .logo {
   width: 0px;
   height: 0px;
@@ -144,17 +151,20 @@ header .container {
   top: -100px;
   left: 100px;
 }
+
 .cloud .logo img {
   width: 500px;
 }
+
 .cloud .text {
   position: absolute;
   top: 98px;
   left: 186px;
   transform: rotate(-10deg);
 }
+
 .cloud .text .h1_first_part, .cloud .text .h1_second_part {
-  font-family: "Permanent Marker";
+  font-family: 'Permanent Marker';
   font-style: normal;
   font-weight: 400;
   font-size: 38.196px;
@@ -163,11 +173,13 @@ header .container {
   width: 300px;
   z-index: 4;
 }
+
 .cloud .text .h1_second_part {
   position: relative;
   left: 95px;
   top: -15px;
 }
+
 .cloud .text .h1_wrapper {
   position: relative;
   z-index: -1;
@@ -175,9 +187,10 @@ header .container {
   left: 67px;
   transform: rotate(10deg);
 }
+
 .cloud .small_text {
   width: 411px;
-  font-family: "Bebas Neue";
+  font-family: 'Bebas Neue';
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -200,22 +213,26 @@ header .container {
   justify-content: center;
   flex-wrap: wrap;
 }
+
 .we_provide .header:hover .header_element_wrapper svg {
   stroke-dasharray: 20;
   animation: 1s linear 0s infinite alternate header_element_wrapper;
 }
+
 @keyframes header_element_wrapper {
   100% {
     stroke-dashoffset: 40;
   }
 }
+
 .we_provide .header {
-  font-family: "Bebas Neue";
+  font-family: 'Bebas Neue';
   font-style: normal;
   font-weight: 700;
   font-size: 45px;
   line-height: 100%;
 }
+
 .we_provide .header .header_element_wrapper {
   width: 0px;
   height: 0px;
@@ -224,6 +241,7 @@ header .container {
   z-index: 2;
   top: -34px;
 }
+
 .we_provide .header .header_element_wrapper_fill {
   width: 0px;
   height: 0px;
@@ -232,6 +250,7 @@ header .container {
   left: -48px;
   top: -13px;
 }
+
 .we_provide .header .header_element_wrapper_decor {
   width: 0px;
   height: 0px;
@@ -242,6 +261,7 @@ header .container {
   left: -135px;
   z-index: 0;
 }
+
 .we_provide .header .header_element_wrapper_decor_2 {
   width: 0px;
   height: 0px;
@@ -252,14 +272,17 @@ header .container {
   left: 154px;
   z-index: 4;
 }
+
 .we_provide .header p {
   position: relative;
   transform: rotate(-6deg);
   z-index: 3;
 }
+
 .we_provide .navigation_wrapper {
   width: 100%;
 }
+
 .we_provide .navigation {
   width: 1000px;
   margin: 0 auto;
@@ -267,9 +290,10 @@ header .container {
   display: flex;
   justify-content: space-around;
 }
+
 .we_provide .navigation_element {
   width: auto;
-  font-family: "Bebas Neue";
+  font-family: 'Bebas Neue';
   font-weight: 700;
   font-size: 45px;
   line-height: 100%;
@@ -277,9 +301,10 @@ header .container {
   color: #FFFFFF;
   transform: rotate(-10deg);
 }
+
 .we_provide .navigation_element span {
   display: block;
-  font-family: "Bebas Neue";
+  font-family: 'Bebas Neue';
   font-style: normal;
   font-weight: 700;
   font-size: 37px;
