--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,8 @@ img, svg {
 .rock_your_app {
   height: 800px;
   background-image: url(../img/rock_your_app/bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 header .container {
@@ -199,6 +201,7 @@ header .container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 200px;
 }
 .we_provide .header:hover .header_element_wrapper svg {
   stroke-dasharray: 20;
@@ -263,7 +266,7 @@ header .container {
 .we_provide .navigation {
   width: 1000px;
   margin: 0 auto;
-  margin-top: 55px;
+  margin-top: 75px;
   display: flex;
   justify-content: space-around;
 }
@@ -272,10 +275,11 @@ header .container {
   font-family: "Bebas Neue";
   font-weight: 700;
   font-size: 45px;
-  line-height: 100%;
+  line-height: 75%;
   text-transform: uppercase;
   color: #FFFFFF;
   transform: rotate(-10deg);
+  transition: 0.5s ease-in-out;
 }
 .we_provide .navigation_element span {
   display: block;
@@ -283,11 +287,282 @@ header .container {
   font-style: normal;
   font-weight: 700;
   font-size: 37px;
-  line-height: 100%;
   text-transform: uppercase;
-  background: linear-gradient(271.98deg, #FF8200 -7.27%, #FFF02E 109.2%), #FFFFFF;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
+  color: #FF8200;
+}
+.we_provide .navigation_element .navigation_element_decor {
+  display: flex;
+  transform: rotate(9deg);
+  padding-top: 20px;
+}
+.we_provide .navigation_element .navigation_element_decor svg {
+  margin: auto;
+}
+.we_provide .navigation_element .navigation_element_decor svg .topline {
+  transition: 0.5s ease-out;
+}
+.we_provide .navigation_element .navigation_element_decor svg .botline {
+  transition: 0.5s ease-out;
+}
+.we_provide .navigation_element:hover {
+  transform: scale(1.1) rotate(0.3deg);
+  cursor: pointer;
+}
+.we_provide .navigation_element:hover svg {
+  margin: auto;
+}
+.we_provide .navigation_element:hover svg .topline {
+  transform: translate(-71px, 7px) rotate(-3.9deg);
+}
+.we_provide .navigation_element:hover svg .botline {
+  transform: translate(61px, -1px) rotate(-1deg);
+}
+.we_provide .gold {
+  width: 0px;
+  height: 0px;
+  opacity: 0;
+  position: absolute;
+  top: -100px;
+  left: 300px;
+  overflow: hidden;
+}
+.we_provide .gold img {
+  position: absolute;
+  left: -400px;
+  top: -46px;
+}
+.we_provide .active {
+  color: white;
+  transform: scale(1.1) rotate(0.3deg);
+  animation: 0.5s ease-in-out we_porive_nav_active_text;
+  animation-fill-mode: forwards;
+}
+@keyframes we_porive_nav_active_text {
+  100% {
+    color: black;
+  }
+}
+.we_provide .active span {
+  color: #FF8200;
+  animation: 0.5s ease-in-out we_porive_nav_active_span;
+  animation-fill-mode: forwards;
+}
+@keyframes we_porive_nav_active_span {
+  100% {
+    color: black;
+  }
+}
+.we_provide .active svg {
+  opacity: 1;
+  animation: 0.2s ease-in-out we_porive_nav_active_svg;
+  animation-fill-mode: forwards;
+}
+@keyframes we_porive_nav_active_svg {
+  100% {
+    opacity: 0;
+  }
+}
+.we_provide .active .gold {
+  height: 300px;
+  width: 400px;
+  opacity: 1;
+  left: -100px;
+  z-index: -1;
+}
+.we_provide .active img {
+  left: 0px;
+}
+.we_provide .text {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 600px;
+  transition: 0.5s;
+}
+.we_provide .text .p {
+  width: 540px;
+  height: 0px;
+  position: absolute;
+  z-index: 2;
+  margin-top: 127px;
+}
+.we_provide .text .p p {
+  font-family: "Bebas Neue";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 34px;
+  width: 576px;
+}
+.we_provide .text .text_wrapper {
+  width: 0px;
+  height: 0px;
+  position: relative;
+  left: -350px;
+  top: 40px;
+  z-index: 1;
+}
+.we_provide .text .text_wrapper svg .border {
+  animation: 1s ease-out text_wrapper_show_anim;
+  animation-fill-mode: forwards;
+  stroke-dasharray: 1920;
+  stroke-dashoffset: 1920;
+}
+@keyframes text_wrapper_show_anim {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+.we_provide .text .text_wrapper_wrapper {
+  width: 0px;
+  height: 0px;
+  position: relative;
+  left: -30px;
+  top: -301px;
+}
+.we_provide .text .text_wrapper_wrapper svg .border {
+  animation: 1s ease-out 1s text_wrapper_show_anim;
+  animation-fill-mode: forwards;
+  stroke-dasharray: 1950;
+  stroke-dashoffset: 1950;
+}
+@keyframes text_wrapper_show_anim {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+.we_provide .text .mouth {
+  height: 0px;
+  width: 0px;
+  position: relative;
+  top: -250px;
+  left: 400px;
+  z-index: -1;
+  animation: 1s ease-out mouth_show_anim;
+  animation-fill-mode: forwards;
+}
+@keyframes mouth_show_anim {
+  70% {
+    top: -50px;
+    left: 700px;
+    z-index: -1;
+  }
+  100% {
+    top: -120px;
+    left: 605px;
+    z-index: 1;
+  }
+}
+.we_provide .text .exc_point {
+  height: 0px;
+  width: 0px;
+  position: relative;
+  top: -291px;
+  left: 500px;
+  z-index: -1;
+  animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 1s exc_point_show_anim;
+  animation-fill-mode: forwards;
+}
+@keyframes exc_point_show_anim {
+  99% {
+    top: -291px;
+    left: 735px;
+    z-index: -1;
+  }
+  100% {
+    top: -291px;
+    left: 735px;
+    z-index: 1;
+  }
+}
+.we_provide .text .star_right {
+  height: 0px;
+  width: 0px;
+  position: relative;
+  top: -125px;
+  z-index: -1;
+  left: 500px;
+  animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 1.5s star_right_show_anim;
+  animation-fill-mode: forwards;
+}
+@keyframes star_right_show_anim {
+  99% {
+    top: -125px;
+    left: 796px;
+    z-index: -1;
+  }
+  100% {
+    top: -125px;
+    left: 796px;
+    z-index: 1;
+  }
+}
+.we_provide .text .star_left {
+  height: 0px;
+  width: 0px;
+  position: relative;
+  top: -100px;
+  z-index: -1;
+  left: 200px;
+  animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 2s star_left_show_anim;
+  animation-fill-mode: forwards;
+}
+@keyframes star_left_show_anim {
+  99% {
+    top: -24px;
+    left: -104px;
+    z-index: -1;
+  }
+  100% {
+    top: -24px;
+    left: -104px;
+    z-index: 1;
+  }
+}
+.we_provide .text .lightning {
+  height: 0px;
+  width: 0px;
+  position: relative;
+  top: -207px;
+  left: 200px;
+  z-index: -1;
+  animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 2.5s lightning_show_anim;
+  animation-fill-mode: forwards;
+}
+@keyframes lightning_show_anim {
+  99% {
+    top: -207px;
+    left: -181px;
+    z-index: -1;
+  }
+  100% {
+    top: -207px;
+    left: -181px;
+    z-index: 1;
+  }
+}
+.we_provide .text .corner {
+  height: 0px;
+  width: 0px;
+  position: relative;
+  z-index: -1;
+  top: -100px;
+  left: 100px;
+  animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 3s corner_show_anim;
+  animation-fill-mode: forwards;
+}
+@keyframes corner_show_anim {
+  99% {
+    top: -291px;
+    left: -48px;
+    z-index: -1;
+  }
+  100% {
+    top: -291px;
+    left: -48px;
+    z-index: 1;
+  }
+}
+.we_provide .hide {
+  opacity: 0;
 }
