--- a/sass/style.sass
+++ b/sass/style.sass
@@ -57,6 +57,8 @@ img, svg
 .rock_your_app
     height: 800px
     background-image: url(../img/rock_your_app/bg.png)
+    background-size: cover
+    background-repeat: no-repeat
 
 header
     .container
@@ -172,6 +174,7 @@ header
     display: flex
     justify-content: center
     flex-wrap: wrap
+    margin-top: 200px
     .header:hover
         .header_element_wrapper
             svg
@@ -230,7 +233,7 @@ header
     .navigation
         width: 1000px
         margin: 0 auto
-        margin-top: 55px
+        margin-top: 75px
         display: flex
         justify-content: space-around
     .navigation_element
@@ -238,20 +241,249 @@ header
         font-family: 'Bebas Neue'
         font-weight: 700
         font-size: 45px
-        line-height: 100%
+        line-height: 75%
         text-transform: uppercase
         color: #FFFFFF
         transform: rotate(-10deg)
+        transition: 0.5s ease-in-out
         span
             display: block
             font-family: 'Bebas Neue'
             font-style: normal
             font-weight: 700
             font-size: 37px
-            line-height: 100%
             text-transform: uppercase
-            background: linear-gradient(271.98deg, #FF8200 -7.27%, #FFF02E 109.2%), #FFFFFF
-            -webkit-background-clip: text
-            -webkit-text-fill-color: transparent
-            background-clip: text
-            text-fill-color: transparent
+            color: #FF8200
+            // animation: 5s linear 0s infinite alternate span_anim
+            // @keyframes span_anim
+            //     100%
+            //         color: #FFF02E
+            // background: linear-gradient(271.98deg, #FF8200 -7.27%, #FFF02E 109.2%), #FFFFFF
+            // -webkit-background-clip: text
+            // -webkit-text-fill-color: transparent
+            // background-clip: text
+            // text-fill-color: transparent
+        .navigation_element_decor
+            display: flex
+            transform: rotate(9deg)
+            padding-top: 20px
+            svg
+                margin: auto
+                .topline
+                    transition: 0.5s ease-out
+                .botline
+                    transition: 0.5s ease-out
+
+    .navigation_element:hover
+        transform: scale(1.1) rotate(0.3deg)
+        cursor: pointer
+        svg
+            margin: auto
+            .topline
+                transform: translate(-71px, 7px) rotate(-3.9deg)
+            .botline
+                transform: translate(61px,-1px) rotate(-1deg)
+
+    .gold
+        width: 0px
+        height: 0px
+        opacity: 0
+        position: absolute
+        top: -100px
+        left: 300px
+        overflow: hidden
+        img
+            position: absolute
+            left: -400px
+            top: -46px
+    .active
+        color: white
+        transform: scale(1.1) rotate(0.3deg)
+        animation: 0.5s ease-in-out we_porive_nav_active_text
+        animation-fill-mode: forwards
+        @keyframes we_porive_nav_active_text
+            100%
+                color: black
+        span
+            color: #FF8200
+            animation: 0.5s ease-in-out we_porive_nav_active_span
+            animation-fill-mode: forwards
+            @keyframes we_porive_nav_active_span
+                100%
+                    color: black
+        svg
+            opacity: 1
+            animation: 0.2s ease-in-out we_porive_nav_active_svg
+            animation-fill-mode: forwards
+            @keyframes we_porive_nav_active_svg
+                100%
+                    opacity: 0
+        .gold
+            height: 300px
+            width: 400px
+            opacity: 1
+            left: -100px
+            z-index: -1
+        img
+            left: 0px
+
+    .text
+        width: 100%
+        display: flex
+        justify-content: center
+        height: 600px
+        transition: 0.5s
+        .p
+            width: 540px
+            height: 0px
+            position: absolute
+            z-index: 2
+            margin-top: 127px
+            p
+                font-family: 'Bebas Neue'
+                font-style: normal
+                font-weight: 400
+                font-size: 24px
+                line-height: 34px
+                width: 576px
+        .text_wrapper
+            width: 0px
+            height: 0px
+            position: relative
+            left: -350px
+            top: 40px
+            z-index: 1
+            svg
+                .border
+                    animation: 1s ease-out text_wrapper_show_anim
+                    animation-fill-mode: forwards
+                    stroke-dasharray: 1920
+                    stroke-dashoffset: 1920
+                    @keyframes text_wrapper_show_anim
+                        100%
+                            stroke-dashoffset: 0
+        .text_wrapper_wrapper
+            width: 0px
+            height: 0px
+            position: relative
+            left: -30px
+            top: -301px
+            svg
+                .border
+                    animation: 1s ease-out 1s text_wrapper_show_anim
+                    animation-fill-mode: forwards
+                    stroke-dasharray: 1950
+                    stroke-dashoffset: 1950
+                    @keyframes text_wrapper_show_anim
+                        100%
+                            stroke-dashoffset: 0
+        .mouth
+            height: 0px
+            width: 0px
+            position: relative
+            top: -250px
+            left: 400px
+            z-index: -1
+            animation: 1s ease-out mouth_show_anim
+            animation-fill-mode: forwards
+            @keyframes mouth_show_anim
+                70%
+                    top: -50px
+                    left: 700px
+                    z-index: -1
+                100%
+                    top: -120px
+                    left: 605px
+                    z-index: 1
+        .exc_point
+            height: 0px
+            width: 0px
+            position: relative
+            top: -291px
+            left: 500px
+            z-index: -1
+            animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 1s exc_point_show_anim
+            animation-fill-mode: forwards
+            @keyframes exc_point_show_anim
+                99%
+                    top: -291px
+                    left: 735px
+                    z-index: -1
+                100%
+                    top: -291px
+                    left: 735px
+                    z-index: 1
+        .star_right
+            height: 0px
+            width: 0px
+            position: relative
+            top: -125px
+            z-index: -1
+            left: 500px
+            animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 1.5s star_right_show_anim
+            animation-fill-mode: forwards
+            @keyframes star_right_show_anim
+                99%
+                    top: -125px
+                    left: 796px
+                    z-index: -1
+                100%
+                    top: -125px
+                    left: 796px
+                    z-index: 1
+        .star_left
+            height: 0px
+            width: 0px
+            position: relative
+            top: -100px
+            z-index: -1
+            left: 200px
+            animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 2s star_left_show_anim
+            animation-fill-mode: forwards
+            @keyframes star_left_show_anim
+                99%
+                    top: -24px
+                    left: -104px
+                    z-index: -1
+                100%
+                    top: -24px
+                    left: -104px
+                    z-index: 1
+        .lightning
+            height: 0px
+            width: 0px
+            position: relative
+            top: -207px
+            left: 200px
+            z-index: -1
+            animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 2.5s lightning_show_anim
+            animation-fill-mode: forwards
+            @keyframes lightning_show_anim
+                99%
+                    top: -207px
+                    left: -181px
+                    z-index: -1
+                100%
+                    top: -207px
+                    left: -181px
+                    z-index: 1
+        .corner
+            height: 0px
+            width: 0px
+            position: relative
+            z-index: -1
+            top: -100px
+            left: 100px
+            animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 3s corner_show_anim
+            animation-fill-mode: forwards
+            @keyframes corner_show_anim
+                99%
+                    top: -291px
+                    left: -48px
+                    z-index: -1
+                100%
+                    top: -291px
+                    left: -48px
+                    z-index: 1
+    .hide
+        opacity: 0
