--- a/sass/style.sass
+++ b/sass/style.sass
@@ -487,3 +487,135 @@ header
                     z-index: 1
     .hide
         opacity: 0
+
+.sources_header
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+    .header
+        // background-color: gray
+        .count
+            font-family: 'Bebas Neue'
+            font-style: normal
+            font-weight: 700
+            font-size: 230px
+            line-height: 100%
+            transform: rotate(-6deg)
+            position: relative
+            z-index: 0
+            top: 57px
+            left: -99px
+        .text
+            font-family: 'Bebas Neue'
+            font-style: normal
+            font-weight: 700
+            font-size: 45px
+            line-height: 100%
+            text-align: center
+            transform: rotate(-6deg)
+            position: relative
+            z-index: 3
+        .text_wrapper
+            width: 0px
+            height: 0px
+            position: relative
+            top: -22px
+            left: 80px
+            z-index: 2
+        .text_wrapper_background
+            width: 0px
+            height: 0px
+            position: relative
+            top: -18px
+            left: 73px
+            z-index: 1
+        .like
+            width: 0px
+            height: 0px
+            position: relative
+            top: -223px
+            left: -230px
+            z-index: 1
+
+.sources_content
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+    width: 100%
+    overflow: hidden
+    height: 100vh
+    position: relative
+    top: -170px
+    .element
+        width: 0px
+        height: 0px
+        position: relative
+    .content_background
+        width: 1140px
+        z-index: -6
+        top: 115px
+    .rocket
+        z-index: -1
+        left: 610px
+        top: 0px
+    .speaker
+        z-index: -1
+        left: 17px
+        top: 492px
+    .speaker_background
+        z-index: -2
+        left: 102px
+        top: 534px
+    .soc_media
+        z-index: -5
+        top: 262px
+        left: 140px
+        .soc_media_background_wrapper
+            top: 14px
+            left: -3px
+        .tt
+            top: 53px
+            left: -48px
+        .fb
+            top: -13px
+            left: 117px
+        .tw
+            top: 24px
+            left: 184px
+        .fc
+            left: -16px
+            top: 4px
+        .sc
+            top: 295px
+            left: 224px
+        .lines
+            top: 248px
+            left: 96px
+        .text
+            transform: rotate(-10deg)
+            top: 147px
+            left: 49px
+            .small
+                font-family: 'Bebas Neue'
+                font-weight: 700
+                font-size: 45px
+                text-transform: uppercase
+                line-height: 100%
+            .big
+                font-family: 'Bebas Neue'
+                font-weight: 700
+                font-size: 75px
+                line-height: 65%
+                text-transform: uppercase
+
+    .mob_user
+        top: 232px
+        left: 436px
+        .background_wrapper
+            left: 9px
+        .text
+            font-family: 'Bebas Neue'
+            font-weight: 700
+            font-size: 42px
+            line-height: 100%
+            text-transform: uppercase
