--- a/sass/style.sass
+++ b/sass/style.sass
@@ -592,7 +592,7 @@ header
             top: 248px
             left: 96px
         .text
-            transform: rotate(-10deg)
+            transform: rotate(-7deg)
             top: 147px
             left: 49px
             .small
@@ -613,9 +613,79 @@ header
         left: 436px
         .background_wrapper
             left: 9px
+        .lines
+            top: 158px
+            left: 95px
         .text
             font-family: 'Bebas Neue'
             font-weight: 700
             font-size: 42px
             line-height: 100%
             text-transform: uppercase
+            width: 200px
+            transform: rotate(-7deg)
+            top: 46px
+            left: 47px
+
+    .retargeting
+        top: 455px
+        left: 428px
+        .background_wrapper
+            left: 14px
+            top: -5px
+        .human
+            left: -15px
+            top: -1px
+        .lines
+            top: 140px
+            left: 110px
+        .text
+            font-family: 'Bebas Neue'
+            font-style: normal
+            font-weight: 700
+            font-size: 42px
+            line-height: 100%
+            text-transform: uppercase
+            transform: rotate(-7deg)
+            width: 167px
+            text-align: center
+            top: 40px
+            left: 60px
+
+    .dsp
+        top: 273px
+        left: 727px
+        .background_wrapper
+            top: 16px
+            left: -1px
+        .android
+            left: 110px
+            top: -40px
+        .point
+            top: 290px
+            left: 54px
+        .p18
+            top: 240px
+            left: -12px
+        .left_corner
+            left: -12px
+            top: 2px
+        .right_corner
+            top: 295px
+            left: 222px
+        .lines
+            top: 211px
+            left: 101px
+        .text
+            font-family: 'Bebas Neue'
+            font-weight: 700
+            font-size: 75px
+            line-height: 100%
+            text-transform: uppercase
+            color: #FFFFFF
+            transform: rotate(-7deg)
+            top: 140px
+            left: 87px
+    .button
+        top: 720px
+        left: 480px
