--- a/sass/style.sass
+++ b/sass/style.sass
@@ -53,7 +53,8 @@ img, svg
     // background-color: rgba(255, 255, 255, .1)
     width: 1300px
     margin: 0 auto
-
+.dnone
+    display: none
 .rock_your_app
     height: 800px
     background-image: url(../img/rock_your_app/bg.png)
@@ -488,12 +489,16 @@ header
     .hide
         opacity: 0
 
+.element
+    width: 0px
+    height: 0px
+    position: relative
 .sources_header
     display: flex
     justify-content: center
     flex-wrap: wrap
+    height: 195px
     .header
-        // background-color: gray
         .count
             font-family: 'Bebas Neue'
             font-style: normal
@@ -503,8 +508,8 @@ header
             transform: rotate(-6deg)
             position: relative
             z-index: 0
-            top: 57px
-            left: -99px
+            top: 0px
+            left: -268px
         .text
             font-family: 'Bebas Neue'
             font-style: normal
@@ -513,28 +518,29 @@ header
             line-height: 100%
             text-align: center
             transform: rotate(-6deg)
-            position: relative
             z-index: 3
+            top: 160px
+            left: -50px
         .text_wrapper
             width: 0px
             height: 0px
             position: relative
-            top: -22px
-            left: 80px
+            top: 131px
+            left: -91px
             z-index: 2
         .text_wrapper_background
             width: 0px
             height: 0px
             position: relative
-            top: -18px
-            left: 73px
+            top: 134px
+            left: -97px
             z-index: 1
         .like
             width: 0px
             height: 0px
             position: relative
-            top: -223px
-            left: -230px
+            top: -27px
+            left: -388px
             z-index: 1
 
 .sources_content
@@ -543,13 +549,10 @@ header
     flex-wrap: wrap
     width: 100%
     overflow: hidden
-    height: 100vh
+    height: 840px
     position: relative
     top: -170px
-    .element
-        width: 0px
-        height: 0px
-        position: relative
+
     .content_background
         width: 1140px
         z-index: -6
@@ -689,6 +692,136 @@ header
     .button
         top: 720px
         left: 480px
+        .wrapper_yellow
+            top: 5px
+            left: -14px
+        .text
+            font-family: 'Marker Felt'
+            font-style: normal
+            font-weight: 400
+            font-size: 27px
+            line-height: 29px
+            width: 120px
+            background: linear-gradient(180deg, #FF9323 0%, #FFF02E 100%), #FFFFFF
+            -webkit-background-clip: text
+            -webkit-text-fill-color: transparent
+            background-clip: text
+            text-fill-color: transparent
+            transform: rotate(-6.44deg)
+            height: 26px
+            top: 34px
+            left: 40px
 
-.dnone
-    display: none
+.vert_header
+    position: relative
+    z-index: 2
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+    height: 195px
+    margin-top: -78px
+    .header
+        .count
+            font-family: 'Bebas Neue'
+            font-style: normal
+            font-weight: 700
+            font-size: 230px
+            line-height: 100%
+            transform: rotate(-6deg)
+            position: relative
+            z-index: 1
+            top: -35px
+            left: -65px
+        .text
+            font-family: 'Bebas Neue'
+            font-style: normal
+            font-weight: 700
+            font-size: 45px
+            line-height: 100%
+            text-align: center
+            transform: rotate(-6deg)
+            z-index: 4
+            top: 160px
+            left: -62px
+        .text_wrapper
+            top: 131px
+            left: -91px
+            z-index: 3
+        .text_wrapper_background
+            top: 137px
+            left: -97px
+            z-index: 2
+        .header_text_wrapper_decor
+            z-index: 0
+            top: 99px
+            left: -111px
+
+.vert_content
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+    width: 100%
+    overflow: hidden
+    height: 800px
+    position: relative
+    top: -20px
+    .text
+        left: 55px
+        top: 288px
+        .wrap
+            width: 200px
+            font-family: 'Bebas Neue'
+            font-weight: 700
+            font-size: 53.6px
+            line-height: 100%
+            text-transform: uppercase
+            color: #FFFFFF
+            transform: rotate(-7deg)
+            text-shadow: 0px 0px 10px black
+    .lines
+        top: 362px
+        left: 95px
+    .bg
+        top: 43px
+        left: -734px
+    .first
+        left: -520px
+        z-index: 2
+        .wrap
+            top: 30px
+            left: -11px
+        .decor
+            top: 510px
+            left: 110px
+
+    .second
+        left: -250px
+        .wrap
+            top: 3px
+        .text
+            left: 70px
+    .third
+        left: 20px
+        .wrap
+            top: 10px
+        .text
+            left: 45px
+            .wrap
+                font-size: 45.6px
+    .fourth
+        left: 290px
+        .text
+            z-index: 2
+        .banner
+            z-index: 1
+        .wrap
+            left: 6px
+            z-index: 1
+        .lines
+            z-index: 1
+        .decor
+            top: 280px
+            left: 210px
+            z-index: 0
+        .text
+            left: 85px
