--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,7 +15,7 @@
     src: url("fonts/Marker Felt 400.ttf")
 
 body
-    background-color: black
+    background-color: gray
     // background-color: gray
     line-height: 1
 
@@ -755,6 +755,9 @@ header
             z-index: 0
             top: 99px
             left: -111px
+        .bomb
+            top: -59px
+            left: 149px
 
 .vert_content
     display: flex
@@ -764,7 +767,8 @@ header
     overflow: hidden
     height: 800px
     position: relative
-    top: -20px
+    top: -40px
+    padding-top: 20px
     .text
         left: 55px
         top: 288px
@@ -793,7 +797,9 @@ header
         .decor
             top: 510px
             left: 110px
-
+        .corner
+            top: 600px
+            left: -9px
     .second
         left: -250px
         .wrap
@@ -825,3 +831,78 @@ header
             z-index: 0
         .text
             left: 85px
+        .corner
+            left: 233px
+            top: -13px
+
+.partners_header
+    position: relative
+    z-index: 2
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+    height: 195px
+    // margin-top: -78px
+    .header
+        .count
+            font-family: 'Bebas Neue'
+            font-style: normal
+            font-weight: 700
+            font-size: 230px
+            line-height: 100%
+            transform: rotate(-6deg)
+            position: relative
+            z-index: 1
+            top: -4px
+            left: -184px
+        .text
+            font-family: 'Bebas Neue'
+            font-style: normal
+            font-weight: 700
+            font-size: 45px
+            line-height: 100%
+            text-align: center
+            transform: rotate(-6deg)
+            z-index: 4
+            top: 160px
+            left: -62px
+        .text_wrapper
+            top: 131px
+            left: -91px
+            z-index: 3
+        .text_wrapper_background
+            top: 137px
+            left: -97px
+            z-index: 2
+        .header_text_wrapper_decor
+            z-index: 0
+            top: 116px
+            left: -201px
+        .bomb
+            top: -161px
+            left: 49px
+            z-index: 3
+
+.partners_content
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+    width: 100%
+    overflow: hidden
+    height: 800px
+    position: relative
+    top: 60px
+    .partner_row
+        width: 100%
+        height: 140px
+        .partner_row_inner
+            width: 1000px
+            margin: 0 auto
+            display: flex
+            justify-content: center
+            .partner_element
+                width: 12%
+                display: flex
+                justify-content: center
+                .partner_logo
+                    width: 0px
