--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   src: url("fonts/Marker Felt 400.ttf");
 }
 body {
-  background-color: gray;
+  background-color: black;
   line-height: 1;
 }
 
@@ -1005,7 +1005,7 @@ header .container {
   position: relative;
   z-index: 1;
   top: -4px;
-  left: -184px;
+  left: -217px;
 }
 .partners_header .header .text {
   font-family: "Bebas Neue";
@@ -1017,26 +1017,26 @@ header .container {
   transform: rotate(-6deg);
   z-index: 4;
   top: 160px;
-  left: -62px;
+  left: -92px;
 }
 .partners_header .header .text_wrapper {
   top: 131px;
-  left: -91px;
+  left: -125px;
   z-index: 3;
 }
 .partners_header .header .text_wrapper_background {
   top: 137px;
-  left: -97px;
+  left: -131px;
   z-index: 2;
 }
 .partners_header .header .header_text_wrapper_decor {
   z-index: 0;
   top: 116px;
-  left: -201px;
+  left: -260px;
 }
 .partners_header .header .bomb {
-  top: -161px;
-  left: 49px;
+  top: -169px;
+  left: 4px;
   z-index: 3;
 }
 
@@ -1046,13 +1046,12 @@ header .container {
   flex-wrap: wrap;
   width: 100%;
   overflow: hidden;
-  height: 800px;
   position: relative;
   top: 60px;
 }
 .partners_content .partner_row {
   width: 100%;
-  height: 140px;
+  height: 160px;
 }
 .partners_content .partner_row .partner_row_inner {
   width: 1000px;
@@ -1066,5 +1065,37 @@ header .container {
   justify-content: center;
 }
 .partners_content .partner_row .partner_row_inner .partner_element .partner_logo {
+  left: -36px;
+  top: 11px;
+}
+.partners_content .partner_row .partner_row_inner .partner_element .text_wrapper {
   width: 0px;
+  height: 0px;
+  left: -60px;
+  top: 112px;
+}
+.partners_content .partner_row .partner_row_inner .partner_element .text_wrapper .text {
+  font-family: "Marker Felt";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12.6px;
+  line-height: 14px;
+  text-align: center;
+  width: 120px;
+}
+.partners_content .partner_row .partner_row_inner .partner_element .wrapper_first_style_1 {
+  left: -50px;
+  top: 6px;
+}
+.partners_content .partner_row .partner_row_inner .partner_element .wrapper_first_style_2 {
+  left: -23px;
+  top: 1px;
+}
+.partners_content .partner_row .partner_row_inner .partner_element .wrapper_second_style_1 {
+  left: -47px;
+  top: 0px;
+}
+.partners_content .partner_row .partner_row_inner .partner_element .wrapper_second_style_2 {
+  left: -30px;
+  top: 18px;
 }
