--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,7 +15,7 @@
     src: url("fonts/Marker Felt 400.ttf")
 
 body
-    background-color: gray
+    background-color: black
     // background-color: gray
     line-height: 1
 
@@ -854,7 +854,7 @@ header
             position: relative
             z-index: 1
             top: -4px
-            left: -184px
+            left: -217px
         .text
             font-family: 'Bebas Neue'
             font-style: normal
@@ -865,22 +865,22 @@ header
             transform: rotate(-6deg)
             z-index: 4
             top: 160px
-            left: -62px
+            left: -92px
         .text_wrapper
             top: 131px
-            left: -91px
+            left: -125px
             z-index: 3
         .text_wrapper_background
             top: 137px
-            left: -97px
+            left: -131px
             z-index: 2
         .header_text_wrapper_decor
             z-index: 0
             top: 116px
-            left: -201px
+            left: -260px
         .bomb
-            top: -161px
-            left: 49px
+            top: -169px
+            left: 4px
             z-index: 3
 
 .partners_content
@@ -889,12 +889,11 @@ header
     flex-wrap: wrap
     width: 100%
     overflow: hidden
-    height: 800px
     position: relative
     top: 60px
     .partner_row
         width: 100%
-        height: 140px
+        height: 160px
         .partner_row_inner
             width: 1000px
             margin: 0 auto
@@ -905,4 +904,31 @@ header
                 display: flex
                 justify-content: center
                 .partner_logo
+                    left: -36px
+                    top: 11px
+                .text_wrapper
                     width: 0px
+                    height: 0px
+                    left: -60px
+                    top: 112px
+                    .text
+                        font-family: 'Marker Felt'
+                        font-style: normal
+                        font-weight: 400
+                        font-size: 12.6px
+                        line-height: 14px
+                        text-align: center
+                        width: 120px
+                .wrapper_first_style_1
+                    left: -50px
+                    top: 6px
+                .wrapper_first_style_2
+                    left: -23px
+                    top: 1px
+
+                .wrapper_second_style_1
+                    left: -47px
+                    top: 0px
+                .wrapper_second_style_2
+                    left: -30px
+                    top: 18px
