--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,16 @@
   font-family: "Marker Felt";
   src: url("fonts/Marker Felt 400.ttf");
 }
+@font-face {
+  font-family: "Helvetica";
+  src: url("fonts/Helvetica 400.ttf");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Helvetica";
+  src: url("fonts/Helvetica 700.ttf");
+  font-weight: 700;
+}
 body {
   background-color: black;
   line-height: 1;
@@ -1098,4 +1108,266 @@ header .container {
 .partners_content .partner_row .partner_row_inner .partner_element .wrapper_second_style_2 {
   left: -30px;
   top: 18px;
+}
+
+.partners_button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.partners_button .button {
+  left: -110px;
+  top: 80px;
+}
+.partners_button .button .text {
+  width: 200px;
+  top: 35px;
+  font-family: "Marker Felt";
+  font-weight: 400;
+  font-size: 27px;
+  line-height: 29px;
+  text-align: center;
+  height: 30px;
+  background: linear-gradient(180deg, #FF9323 0%, #FFF02E 100%), #FFFFFF;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  transform: rotate(-6.44deg);
+}
+.partners_button .button .wrapper_yellow {
+  left: -15px;
+  top: 5px;
+}
+
+.latest_article_header {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 195px;
+  margin-top: 120px;
+}
+.latest_article_header .header .text {
+  font-family: "Bebas Neue";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 100%;
+  text-align: center;
+  transform: rotate(-6deg);
+  z-index: 4;
+  top: 171px;
+  left: -84px;
+}
+.latest_article_header .header .text .wrap {
+  width: 230px;
+}
+.latest_article_header .header .text_wrapper {
+  top: 131px;
+  left: -125px;
+  z-index: 3;
+}
+.latest_article_header .header .text_wrapper_background {
+  top: 137px;
+  left: -131px;
+  z-index: 2;
+}
+
+.latest_article_content {
+  margin-top: 85px;
+}
+.latest_article_content .latest_article_row {
+  width: 100%;
+  height: 160px;
+}
+.latest_article_content .latest_article_row .latest_article_row_inner {
+  width: 900px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.latest_article_content .latest_article_row .latest_article_row_inner .latest_article_element {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+}
+.latest_article_content .latest_article_row .latest_article_row_inner .latest_article_element .latest_article_wrapper_background {
+  widht: 0px;
+  height: 0px;
+  z-index: -1;
+}
+.latest_article_content .latest_article_row .latest_article_row_inner .latest_article_element .text {
+  width: 202px;
+  top: 35px;
+  left: 38px;
+}
+.latest_article_content .latest_article_row .latest_article_row_inner .latest_article_element .text .date {
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 11.7px;
+  line-height: 13px;
+  color: #FFFBFB;
+  opacity: 0.4;
+  padding-top: 7px;
+}
+.latest_article_content .latest_article_row .latest_article_row_inner .latest_article_element .text .article {
+  margin-top: 10px;
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: #FFFBFB;
+}
+.latest_article_content .latest_article_row .latest_article_row_inner .latest_article_element .read_more_background {
+  top: 179px;
+  left: 40px;
+}
+.latest_article_content .latest_article_row .latest_article_row_inner .latest_article_element .read_more_text {
+  top: 192px;
+  left: 70px;
+}
+.latest_article_content .latest_article_row .latest_article_row_inner .latest_article_element .read_more_text .wrap {
+  width: 200px;
+  color: black;
+  font-family: "Bebas Neue";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18.6838px;
+  line-height: 19px;
+  color: #000000;
+}
+
+.latest_article_button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.latest_article_button .button {
+  left: -110px;
+  top: 80px;
+}
+.latest_article_button .button .text {
+  width: 200px;
+  top: 35px;
+  font-family: "Marker Felt";
+  font-weight: 400;
+  font-size: 27px;
+  line-height: 29px;
+  text-align: center;
+  height: 30px;
+  background: linear-gradient(180deg, #FF9323 0%, #FFF02E 100%), #FFFFFF;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  transform: rotate(-6.44deg);
+}
+.latest_article_button .button .wrapper_yellow {
+  left: -15px;
+  top: 5px;
+}
+
+.footer_and_form_header {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 75px;
+  margin-top: 150px;
+}
+.footer_and_form_header .header .text {
+  font-family: "Bebas Neue";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 100%;
+  text-align: center;
+  transform: rotate(-6deg);
+  z-index: 4;
+  top: 167px;
+  left: -129px;
+}
+.footer_and_form_header .header .text .wrap {
+  width: 230px;
+}
+.footer_and_form_header .header .text_wrapper {
+  top: 131px;
+  left: -125px;
+  z-index: 3;
+}
+.footer_and_form_header .header .text_wrapper_background {
+  top: 137px;
+  left: -131px;
+  z-index: 2;
+}
+.footer_and_form_header .header .header_text_decor {
+  top: 96px;
+  left: -243px;
+  z-index: 3;
+}
+
+.footer_and_form_content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-image: url(../img/footer_and_form/background.png);
+  height: 700px;
+  padding-top: 120px;
+  background-position: bottom;
+  background-size: cover;
+}
+.footer_and_form_content .background {
+  left: -510px;
+  top: -10px;
+}
+.footer_and_form_content .background_wrapper {
+  left: -535px;
+  top: -23px;
+}
+.footer_and_form_content .form {
+  top: 60px;
+  left: -448px;
+}
+.footer_and_form_content .form form {
+  width: 580px;
+  height: 20px;
+  justify-content: space-between;
+  display: flex;
+}
+.footer_and_form_content .form form label {
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+}
+.footer_and_form_content .form form .left {
+  width: 200px;
+}
+.footer_and_form_content .form form .left input {
+  outline: none;
+  width: 100%;
+  background: none;
+  border: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+  color: white;
+  margin-top: 6px;
+  margin-bottom: 12px;
+}
+.footer_and_form_content .form form .right {
+  width: 320px;
+}
+.footer_and_form_content .form form .right textarea {
+  height: 148px;
+  width: 100%;
+  outline: none;
+  margin-top: 27px;
+  background: none;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  color: white;
 }
